litmask/tests/compile/masked_serialize_serde_attr_field.stderr
error: MaskedSerialize! invalid-arg: `#[serde(...)]` attributes are not supported
 --> tests/compile/masked_serialize_serde_attr_field.rs:9:5
  |
9 |     #[serde(rename = "url")]
  |     ^
